[gd_scene load_steps=6 format=3 uid="uid://cb3s827gl7ugu"]

[ext_resource type="Script" path="res://src/sound_manager.gd" id="1_i2s06"]
[ext_resource type="AudioStream" uid="uid://dbs1id8q7j2dj" path="res://assets/powerUp.wav" id="1_kas6w"]
[ext_resource type="AudioStream" uid="uid://kfkll1sw56d5" path="res://assets/pickup.wav" id="2_o4bg1"]
[ext_resource type="Script" path="res://src/DebounceAudio.gd" id="3_nl384"]
[ext_resource type="AudioStream" uid="uid://c4f84ct5a5xsp" path="res://assets/cleared.wav" id="5_0p1oi"]

[node name="SoundManager" type="Node"]
process_mode = 3
script = ExtResource("1_i2s06")

[node name="PacmanPoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o4bg1")
volume_db = -15.0
script = ExtResource("3_nl384")

[node name="PacmanPowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_kas6w")
volume_db = -10.0
script = ExtResource("3_nl384")

[node name="ClearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0p1oi")
volume_db = -10.0
